crating inicial page

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                 <div class="menu">
                     <nav>
                         <ul>
-                            <li><a href="">Home</a></li>
+                            <li class="active"><a href="">Home</a></li>
                             <li><a href="">About Us</a></li>
                             <li><a href="">Services</a></li>
                             <li><a href="">Our Projects</a></li>
@@ -35,7 +35,62 @@
                 </div>
             </div>
         </header>
-        <main></main>
+        <main>
+            <section class="banner">
+                <div class="sliders" style="margin-left: vw">
+                    <div class="slide">
+                        <div class="slide-area">
+                            <h1>Desing is about <br /><span>Communication</span></h1>
+                            <h2>Call Us: +00 0 1234 5678</h2>
+                            <a href="">Get in touch!</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="slide-area">
+                            <h1>Desing is about <br /><span>Teste</span></h1>
+                            <h2>Call Us: +00 0 1234 5678</h2>
+                            <a href="">Get in touch!</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="slide-area">
+                            <h1>Desing is about <br /><span>Algo</span></h1>
+                            <h2>Call Us: +00 0 1234 5678</h2>
+                            <a href="">Get in touch!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="sliders-pointers">
+                    <div class="pointer active"></div>
+                    <div class="pointer"></div>
+                    <div class="pointer"></div>
+                </div>
+            </section>
+            <section class="default light">
+                <div class="section-tittle">About US</div>
+                <div class="section-desc">Who we are?</div>
+                <div class="section-body">
+                    <div class="section-aboutus">
+                        <div class="section-aboutus--left">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis accumsan pretium.
+                            Mauris rutrum blandit ultricies. Etiam molestie, erat vitae sollicitudin condimentum, ante
+                            arcu convallis diam, nec ultrices nisl urna vitae justo. Suspendisse non tincidunt nisl. Nam
+                            eu tempor dui. Pellentesque ac neque sit amet ipsum malesuada gravida. Proin fringilla ex
+                            diam, nec molestie nulla feugiat nec. Integer nisi magna, ornare sit amet viverra vel,
+                            pharetra sed sapien.
+                            <br />
+                            <a href="" class="button">Learn more</a>
+                        </div>
+                        <div class="section-aboutus--rigth"><img src="media/foto9.jpg" alt="" /></div>
+                    </div>
+                </div>
+            </section>
+            <section class="default dark">
+                <div class="section-tittle">About US</div>
+                <div class="section-desc">Who you ware</div>
+                <div class="section-body">boom</div>
+            </section>
+        </main>
         <footer></footer>
     </body>
 </html>
