creating 'our projects'

--- a/home.html
+++ b/home.html
@@ -72,23 +72,186 @@
                 <div class="section-body">
                     <div class="section-aboutus">
                         <div class="section-aboutus--left">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis accumsan pretium.
-                            Mauris rutrum blandit ultricies. Etiam molestie, erat vitae sollicitudin condimentum, ante
-                            arcu convallis diam, nec ultrices nisl urna vitae justo. Suspendisse non tincidunt nisl. Nam
-                            eu tempor dui. Pellentesque ac neque sit amet ipsum malesuada gravida. Proin fringilla ex
-                            diam, nec molestie nulla feugiat nec. Integer nisi magna, ornare sit amet viverra vel,
-                            pharetra sed sapien.
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis accumsan pretium.
+                                Mauris rutrum blandit ultricies. Etiam molestie, erat vitae sollicitudin condimentum,
+                                ante arcu convallis diam, nec ultrices nisl urna vitae justo. Suspendisse non tincidunt
+                                nisl. Nam eu tempor dui. Pellentesque ac neque sit amet ipsum malesuada gravida. Proin
+                                fringilla ex diam, nec molestie nulla feugiat nec. Integer nisi magna, ornare sit amet
+                                viverra vel, pharetra sed sapien.
+                            </p>
                             <br />
                             <a href="" class="button">Learn more</a>
                         </div>
-                        <div class="section-aboutus--rigth"><img src="media/foto9.jpg" alt="" /></div>
+                        <div class="section-aboutus--rigth">
+                            <video src="media/Watch Awax.mp4" controls>
+                                <source src="" type="video.mp4" />
+                            </video>
+                        </div>
                     </div>
                 </div>
             </section>
             <section class="default dark">
-                <div class="section-tittle">About US</div>
-                <div class="section-desc">Who you ware</div>
-                <div class="section-body">boom</div>
+                <div class="section-tittle">Services</div>
+                <div class="section-desc">services that we provide</div>
+                <div class="section-body">
+                    <div class="section-services">
+                        <div class="section-service">
+                            <img src="assets/images/medalha.png" alt="" />
+                            <h4>
+                                High quality <br />
+                                design
+                            </h4>
+                            <p>condimentum, ante arcu convallis Mauris rutrum</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="assets/images/estrela.png" alt="" />
+                            <h4>modern design</h4>
+                            <p id="p2">condimentum, ante arcu convallis Mauris rutrum</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="assets/images/relogio.png" alt="" />
+                            <h4>regular <br />updates</h4>
+                            <p>condimentum, ante arcu convallis</p>
+                        </div>
+                        <div class="section-service">
+                            <img src="assets/images/balao.png" alt="" />
+                            <h4>
+                                fast and free <br />
+                                support
+                            </h4>
+                            <p>condimentum, ante arcu convallis Mauris rutrum</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="default light">
+                <div class="section-tittle">Our Projects</div>
+                <div class="section-desc">Whate we create</div>
+                <div class="section-body">
+                    <div class="section-projects">
+                        <div class="section-projects--filters">
+                            <ul>
+                                <li>All</li>
+                                <li class="active">Photos</li>
+                                <li>Branding</li>
+                                <li>Adverts</li>
+                                <li>Development</li>
+                                <li>Misc</li>
+                            </ul>
+                        </div>
+                        <div class="section-projects--photos">
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto1.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto2.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto3.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto4.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto5.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto6.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto1.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto2.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto3.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto4.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto5.jpg" alt="" />
+                                </div>
+                            </div>
+                            <div class="sections-projects--photo">
+                                <div class="sections-projects--photoarea">
+                                    <div class="section-projects--photoinfo">
+                                        <h5>about</h5>
+                                        <p>Mauris rutrum blandit ultricies.</p>
+                                    </div>
+                                    <img src="media/foto6.jpg" alt="" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer></footer>
